<resources>
    <string name="app_name">PARROT</string>
    <string name="action_settings">Settings</string>
    <string name="menu_insert">Add Sound</string>
    <string name="helpButton">Read Me</string>
    <string name="Recording">Android Audio Recording Application</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="play">play</string>
    <string name="speech_prompt">Say something</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_text">Android TTS Example</string>
    <string name="talk_text">Android STT Example</string>
    <string name="button_speech">Speak !!</string>
    <string name="speedRate">Speech rate</string>
    <string name="pitch">Pitch</string>
    <string name="hint">Some text to speak</string>
    <string name="sst_hint">Tap to talk</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
</resources>
